--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>rosgraph_msgs</depend>
   <depend>tf2_ros</depend>
   <depend>cv_bridge</depend>
 
