--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,7 @@
   <depend>roscpp</depend>
   <depend>eigen_catkin</depend>
   <depend>glog_catkin</depend>
+  <depend>gflags_catkin</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
