Implemented drifting and noisy odometry simulator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ cs_add_library(${PROJECT_NAME}
         src/simulator_processing/processor_factory.cpp
         src/simulator_processing/depth_to_pointcloud.cpp
         src/simulator_processing/infrared_id_compensation.cpp
+        src/simulator_processing/odometry_drift_simulator/odometry_drift_simulator.cpp
+        src/simulator_processing/odometry_drift_simulator/normal_distribution.cpp
         )
 
 ###############
