--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
   <depend>eigen_catkin</depend>
   <depend>glog_catkin</depend>
   <depend>gflags_catkin</depend>
+  <depend>minkindr_conversions</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
