--- a/cfg/demo.yaml
+++ b/cfg/demo.yaml
@@ -21,7 +21,7 @@ sensors:
       
   Depth_cam:
     sensor_type: Camera
-    image_type: DepthPlanner
+    image_type: DepthPlanar
     rate: 3
     pixels_as_float: true
     CaptureSettings:   
